--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "calibre-ui",
-  "version": "0.1",
+  "version": "0.0.1",
   "description": "A user interface for a Calibre Server",
   "main": "index.js",
   "repository": "git@github.com:gsumpster/calibre-ui.git",
@@ -10,6 +10,16 @@
     "express": "^4.15.3",
     "express-graphql": "^0.6.6",
     "graphql": "^0.10.1",
-    "sequelize": "^3.30.4"
+    "sequelize": "^3.30.4",
+    "sqlite3": "^3.1.8"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-preset-env": "^1.5.1"
+  },
+  "scripts": {
+    "build": "babel src -d build",
+    "start": "nodemon --exec npm run babel-node -- src/index.js",
+    "babel-node": "babel-node"
   }
 }
