--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "George Sumpster <gsumpster@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.3",
     "express": "^4.15.3",
     "express-graphql": "^0.6.6",
     "graphql": "^0.10.1",
